--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expect": "^1.20.2",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
+    "normalizr": "^3.2.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
